# platform.core.context.context-common

./: AUTHORS  CMakeLists.txt
include/: ContextManager.h  ContextProvider.h  ContextProviderBase.h  CustomRegister.h  DBusClient.h  DBusSignalWatcher.h  DBusTypes.h  DatabaseManager.h  ErrorTypes.h  EventDrivenThread.h  IContextManager.h  IContextProvider.h  ICustomRegister.h  IDBusClientListener.h  IDBusSignalListener.h  IDatabaseListener.h  ITimerListener.h  Json.h  MyPlaceTypes.h  ProviderTypes.h  ScopeMutex.h  SensorRecorderTypes.h  SharedVars.h  Timer.h  TimerManager.h  Types.h  context_mgr.h  context_mgr_iface.h  db_listener_iface.h  db_mgr.h  db_mgr_iface.h  dbus_listener_iface.h  dbus_server.h  dbus_server_iface.h  event_driven.h  json.h  provider_iface.h  request_handler.h  scope_mutex.h  shared_vars.h  (+8 more)
packaging/: context-common.spec
src/: DBusSignalWatcher.cpp  EventDrivenThread.cpp  ScopeMutex.cpp  context_mgr.cpp  db_mgr.cpp  dbus_client.cpp  dbus_client.h  dbus_server.cpp  event_driven.cpp  json.cpp  request_handler.cpp  response_handler.h  scope_mutex.cpp  shared_vars.cpp  starter.cpp  timer_mgr.cpp  zone_util.cpp
src/client/: CMakeLists.txt  DBusClient.cpp  IDBusClientListener.cpp
src/server/: CMakeLists.txt  ContextManager.cpp  ContextProvider.cpp  ContextProviderBase.cpp  CustomRegistser.cpp  DBusSignalWatcher.cpp  DatabaseManager.cpp  DatabaseThread.cpp  DatabaseThread.h  EventDrivenThread.cpp  IContextManager.cpp  IContextProvider.cpp  IDBusSignalListener.cpp  IDatabaseListener.cpp  ITimerListener.cpp  SharedVars.cpp  Timer.cpp  TimerManager.cpp  context_mgr.cpp  db_mgr.cpp  provider_iface.cpp  timer_mgr.cpp  timer_util.cpp
src/shared/: CMakeLists.txt  Json.cpp  MyPlaceTypes.cpp  ScopeMutex.cpp  dbus_client.cpp  request_handler.cpp  response_handler.h
