CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(target "ctx-client")

FILE(GLOB_RECURSE SRCS *.cpp)
MESSAGE("Sources: ${SRCS}")

ADD_LIBRARY(${target} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${target} ${LIB_PKG_LDFLAGS})
TARGET_LINK_LIBRARIES(${target} ctx-shared)
SET_TARGET_PROPERTIES(${target} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${target} PROPERTIES VERSION ${FULLVER})

INSTALL(TARGETS ${target} DESTINATION ${CMAKE_INSTALL_LIBDIR})
